--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,16 @@
 <resources>
     <string name="app_name">Evs</string>
 
+    <string name="drawer_open">Slider Menu Opened</string>
+    <string name="drawer_close">Slider Menu Closed</string>
+
     <string name="hello_world">Hello world!</string>
     <string name="drawer_opensource">Open Source</string>
+    <string name="drawer_switch">SwitchSample</string>
+
+
+    <string name="dialog_nointernet">No internet connection!</string>
+    <string name="dialog_uploading">Progress Sample&#8230;</string>
 
     <string name="action_settings">Settings</string>
 </resources>
