improvements and cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="drawer_close">Slider Menu Closed</string>
 
     <string name="hello_world">Hello world!</string>
-    <string name="drawer_opensource">Open Source</string>
+    <string name="drawer_pollution">Pollution</string>
     <string name="drawer_switch">SwitchSample</string>
 
 
